# ranger-garden-assistant

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  CAN_SETUP.md  QUICK_START.md
scripts/: 99-ranger-can.rules  build_workspace.sh  can-arm-setup.service  can-base-setup.service  connect_livox.sh  install_can_udev.sh  save_maps.sh  setup_can.sh  setup_livox_network.sh
src/ranger_bringup/: CMakeLists.txt  package.xml
src/ranger_bringup/launch/: livox_lidar.launch.py  navigation.launch.py  ranger_complete_bringup.launch.py  slam.launch.py
src/ranger_description/: CMakeLists.txt
src/ranger_description/launch/: display.launch.py
src/ranger_description/rviz/: view_robot.rviz
src/ranger_description/urdf/: ranger_complete.urdf.xacro
src/robofi_bringup/: CMakeLists.txt  package.xml
src/robofi_bringup/config/: fast_lio.yaml  fastlio2_lio.yaml  fastlio2_localizer.yaml  fastlio2_pgo.yaml  livox_mid360_config.json  nav2_params.yaml  octomap_server.yaml
src/robofi_bringup/launch/: fast_lio.launch.py  fastlio2_navigation.launch.py  livox_lidar.launch.py  navigation.launch.py  ranger_base.launch.py  ranger_complete_bringup.launch.py
src/robofi_bringup/rviz/: fastlio2_mapping.rviz  robot_bringup.rviz
